    - Optimization in enforcing the end of the process
    - Optimization in the analysis of the exit code now consistently leads to
      status 502 in the access log and, if no header has been sent yet, also as
      HTTP status.
CR: HTTP(S): Optimization and corrections
    - Optimization in handling blocking I/O streams
CR: HTTP(S) Directory Index: Optimization and corrections
CR: Review: Initialize refactored in Settings
??: Facelift: Status / Index / Templates
??: Windows: Update of service-32.exe / service-64.exe (prunsrv.exe 1.4.x)
    - https://commons.apache.org/daemon/procrun.html
    - https://downloads.apache.org/commons/daemon/binaries/
??: Documentation: Update for Unix and Linux
??: Configuration: Add # as optional/alternavtive comment symbols

5.8.0 20251231
NT: Competition: 25 years Devwex -- raffle one of 10x 3.5" disks.
    Send an e-mail to devwex@seanox.com by 04/11/2026.
    The outcome of the raffle is final and not subject to legal appeal. 
BF: Review: Optimization and corrections
BF: HTTP(S): Update / standardization of HTTP status messages
BF: HTTP(S): Omission of status 424, which was simply incorrect
    Status 400 and 500 are now used correctly.
CR: Test: Integration of JaCoCo (Java Code Coverage)
CR: Service: Optimization of logging output

5.7.0 20241214
BF: Unix/Linux: Correction of the missing second start parameter in the bash script
BF: Windows: Correction of the missing second start parameter in the batch script
BF: HTTP(S): Correction of the Accept header when using CGI
    The server has incorrectly determined the content type for the CGI.
    Now the CGI must take care of the Accept header, as it should.
BF: Service: Optimization of automatic resource clean-up
BF: Service: Optimization for UTF-8
    In relation to RFC 20, RFC 1345, RFC 2616, RFC 7230: 7-bit US-ASCII and in
    extension ISO-8859-1 are supported for request and response.
CR: Unix/Linux: Optimization of bash scripts and runtime directory handling